--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -4,7 +4,9 @@
   <title>Facebook Chat Sidebar</title>
   <link rel="stylesheet" href="css/sidebar.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/antiscroll.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="css/dd.css" type="text/css" media="screen" charset="utf-8">
   <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.dd.js"></script>
   <script type="text/javascript" src="js/jquery-mousewheel.js"></script>
   <script type="text/javascript" src="js/antiscroll.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
@@ -18,18 +20,20 @@
     }
 
     $(document).ready(function() {
-      //console.log('onReady 1 START');
       setAntiscrollHeight();
       $('.box-wrap').antiscroll();
-      //console.log('onReady 1 END');
+
+      try {
+        $('body select').msDropDown();
+      } catch(e) {
+        alert(e.message);
+      }
     });
     $(window).resize(function() {
-      //console.log('onResize START');
       setAntiscrollHeight();
       if ($('.box-wrap').data('antiscroll')) {
         $('.box-wrap').data('antiscroll').rebuild();
         }
-      //console.log('onResize END');
     });
   </script>
 </head>
@@ -38,10 +42,25 @@
     <div id="inner-wrap">
       <div class="content-item" id="chat-content">
         <p id="unavail" style="display:none"></p>
-        <p id="logout"><a href="#" tabIndex="-1">Logout</a></p>
-
-        <div id="search-wrap">
-          <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
+        
+        <div id="sidebar-head">
+          <div id="head-col1">
+            <img id="head-profile-img" src="http://graph.facebook.com/1/picture?type=square" alt="profile image" />
+          </div>
+          <div id="head-col2">
+            <div id="head-col2-row1">
+              <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
+            </div>
+            <div id="head-col2-row2">
+              <div id="status-select">
+                <select name="status-control" id="status-control">
+                  <option value="available" title="images/active.png">Available</option>
+                  <option value="unavailable" title="images/unavail.png">Offline</option>
+                </select>
+              </div>
+              <p id="logout"><a href="#" tabIndex="-1">Logout</a></p>
+            </div>
+          </div>
         </div>
 
         <div class="box-wrap antiscroll-wrap">
