--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -44,22 +44,28 @@
         <p id="unavail" style="display:none"></p>
         
         <div id="sidebar-head">
-          <div id="head-col1">
-            <img id="head-profile-img" src="http://graph.facebook.com/1/picture?type=square" alt="profile image" />
-          </div>
-          <div id="head-col2">
-            <div id="head-col2-row1">
-              <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
+          <div id="head-row1">
+            <div id="head-col1">
+              <img id="head-profile-img" src="http://graph.facebook.com/1/picture?type=square" alt="profile image" />
             </div>
-            <div id="head-col2-row2">
-              <div id="status-select">
-                <select name="status-control" id="status-control">
-                  <option value="available" title="images/active.png">Available</option>
-                  <option value="unavailable" title="images/unavail.png">Offline</option>
-                </select>
+            <div id="head-col2">
+              <div id="head-col2-row1" title="Set your Facebook status message by clicking this area.">
+                Set your status here.
               </div>
-              <p id="logout"><a href="#" tabIndex="-1">Logout</a></p>
-            </div>
+
+              <div id="head-col2-row2"><!-- chat status + logout -->
+                <div id="status-select">
+                  <select name="status-control" id="status-control">
+                    <option value="available" title="images/active.png">Available</option>
+                    <option value="unavailable" title="images/unavail.png">Offline</option>
+                  </select>
+                </div>
+                <p id="logout"><a href="#" tabIndex="-1">Logout</a></p>
+              </div><!-- #head-col2-row2 -->
+            </div><!-- #head-col2 -->
+          </div><!-- #head-row1 -->
+          <div id="head-row2">
+            <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
           </div>
         </div>
 
