New tab page mod with boxbub iframe.

--- a/chrome/browser/resources/ntp4/new_tab.html
+++ b/chrome/browser/resources/ntp4/new_tab.html
@@ -55,6 +55,7 @@
 <script src="apps_page.js"></script>
 <script src="dot_list.js"></script>
 <script src="most_visited_page.js"></script>
+<script src="news_page.js"></script>
 <script src="trash.js"></script>
 <script src="page_list_view.js"></script>
 <script src="page_switcher.js"></script>
