Fixed search field behavior for friends sidebar.

--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -65,7 +65,7 @@
             </div><!-- #head-col2 -->
           </div><!-- #head-row1 -->
           <div id="head-row2">
-            <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" />
+            <input id="search" type="search" placeholder="Search..." name="s" tabIndex="-1" incremental="incremental" />
           </div>
         </div>
 
