--- a/chrome/browser/resources/help/help.html
+++ b/chrome/browser/resources/help/help.html
@@ -71,7 +71,7 @@
           i18n-content="showMoreInfo">
       </button>
 </if>
-<if expr="pp_ifdef('chromeos') or pp_ifdef('_google_chrome') or is_linux">
+<if expr="pp_ifdef('chromeos') or not is_macosx or is_linux">
       <div id="update-status-container" hidden>
         <div id="update-status-icon" class="up-to-date"></div>
         <span id="update-status" i18n-content="updateCheckStarted"></span>
