Updated extensions to work with new settings UI.
Extensions updated to manifest version 2.

--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -11,31 +11,7 @@
   <script type="text/javascript" src="js/antiscroll.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
   <script type="text/javascript" src="js/friends_sidebar.js"></script>
-  <script type="text/javascript">
-    function setAntiscrollHeight() {
-      $('.box, .box .antiscroll-inner').height(
-        $('body').height() - $('.box-wrap').offset().top
-      );
-      $('.antiscroll-inner').width($('body').width());
-    }
-
-    $(document).ready(function() {
-      setAntiscrollHeight();
-      $('.box-wrap').antiscroll();
-
-      try {
-        $('body select').msDropDown();
-      } catch(e) {
-        alert(e.message);
-      }
-    });
-    $(window).resize(function() {
-      setAntiscrollHeight();
-      if ($('.box-wrap').data('antiscroll')) {
-        $('.box-wrap').data('antiscroll').rebuild();
-        }
-    });
-  </script>
+  <script type="text/javascript" src="js/friends_sidebar_init.js"></script>
 </head>
 <body>
   <div id="slide-wrap">
