--- a/bitpop_specific/extensions/facebook_friends/chat.html
+++ b/bitpop_specific/extensions/facebook_friends/chat.html
@@ -10,36 +10,7 @@
   <script src="js/jquery.textarea-expander.js"></script>
   <script src="js/common.js"></script>
   <script src="js/chat_popup.js"></script>
-  <script type="text/javascript">
-    if (location.search !== "?foo") {
-      location.search = "?foo";
-      throw new Error;  // load everything on the next page;
-                            // stop execution on this page
-    }
-
-    $(function() {
-        bitpop.chat.init();
-
-        $('.box-wrap').antiscroll();
-
-        function setUserNameCallback(uname) {
-          $('.content-friend-name').text(uname);
-        }
-
-        function setHeadURL(profile_url) {
-          $('#head').click(function() { chrome.tabs.create({ url: profile_url }); });
-        }
-
-        chrome.extension.sendRequest(bitpop.CONTROLLER_EXTENSION_ID,
-          { type: 'getFBUserNameByUid',
-            uid: window.location.hash.substr(1).split('&')[0] },
-          function (response) {
-            setUserNameCallback(response.uname);
-            setHeadURL(response.profile_url);
-          }
-        );
-    });
-  </script>
+  <script src="js/chat_init.js"></script>
 </head>
 <body>
   <div id="head" class="content-friend-name">
