WIP next stage of adding settings UI.

--- a/chrome/browser/resources/options2/bitpop_proxy_domain_settings_overlay.html
+++ b/chrome/browser/resources/options2/bitpop_proxy_domain_settings_overlay.html
@@ -1,9 +1,9 @@
 <div id="bitpopProxyDomainSettingsOverlay" class="page" hidden>
-  <h1><span i18n-content="uncensorBlockedSites"></span></h1>
+  <h1><span i18n-content="uncensorBlockedSitesTitle"></span></h1>
   <div class="close-button"></div>
   <div class="content-area">
     <div>
-      <span i18n-content="aListOfSitesBlocked"></span>
+      <span i18n-content="aListOfSitesBlocked_start"></span> <span id="ipRecognitionCountryName"></span> <span i18n-content="aListOfSitesBlocked_end"></span>
     </div>
     <div>
       <!--<span i18n-content="clickTheButtonToUpdate"></span>-->
