--- a/chrome/browser/resources/options2/bitpop_uncensor_filter_overlay.html
+++ b/chrome/browser/resources/options2/bitpop_uncensor_filter_overlay.html
@@ -1,12 +1,15 @@
-<div id="bitpopUncensorFilterOverlay" class="page" hidden>
+<div id="bitpop-uncensor-filter-overlay-page" class="page" hidden>
   <h1><span i18n-content="uncensorFilterOverlayTitle"></span></h1>
   <div class="close-button"></div>
   <div class="content-area"></div>
-    <h3><span i18n-content="uncensorTheFilter">The filter</span></h3>
-    <list id="domain-filter-table" class="settings-list"></list>
-
-    <h3><span i18n-content="uncensorExceptions">Exceptions</span></h3>
-    <list id="domain-exceptions-table" class="settings-list"></list>
+    <div id="filter-list-div" hidden>
+      <h3><span i18n-content="uncensorTheFilter">The filter</span></h3>
+      <list id="domain-filter-table" class="settings-list"></list>
+    </div>
+    <div id="exception-list-div" hidden>
+      <h3><span i18n-content="uncensorExceptions">Exceptions</span></h3>
+      <list id="domain-exceptions-table" class="settings-list"></list>
+    </div>
   </div>
 </div>
 
