Finished the extension settings work.
- also modified version of Chromium used
  (for User-Agent string)

--- a/chrome/browser/resources/options2/bitpop_options_container.html
+++ b/chrome/browser/resources/options2/bitpop_options_container.html
@@ -16,6 +16,8 @@
 <link rel="stylesheet" href="search_engine_manager.css">
 <link rel="stylesheet" href="search_page.css">
 <link rel="stylesheet" href="subpages_tab_controls.css">
+<link rel="stylesheet" href="bitpop_proxy_domain_settings_overlay.css">
+<link rel="stylesheet" href="bitpop_uncensor_filter_overlay.css">
 
 <script src="chrome://resources/css/tree.css.js"></script>
 <script src="chrome://resources/js/cr.js"></script>
@@ -41,7 +43,7 @@
 <script src="chrome://resources/js/cr/ui/tree.js"></script>
 <script src="chrome://resources/js/load_time_data.js"></script>
 <script src="chrome://resources/js/util.js"></script>
-<script src="chrome://settings-frame/options_bundle.js"></script>
+<script src="chrome://bitpop-settings-frame/options_bundle.js"></script>
 </head>
 <body class="uber-frame"
     i18n-values=".style.fontFamily:fontfamily;.style.fontSize:fontsize">
@@ -76,7 +78,7 @@
   </div>
 </div>
 
-<script src="chrome://settings-frame/strings.js"></script>
+<script src="chrome://bitpop-settings-frame/strings.js"></script>
 <script src="chrome://resources/js/i18n_template2.js"></script>
 </body>
 </html>
