--- a/chrome/browser/resources/options2/bitpop_proxy_domain_settings_overlay.html
+++ b/chrome/browser/resources/options2/bitpop_proxy_domain_settings_overlay.html
@@ -1,14 +1,11 @@
-<div id="bitpopProxyDomainSettingsOverlay" class="page" hidden>
+<div id="bitpop-proxy-domain-settings-overlay-page" class="page" hidden>
   <h1><span i18n-content="uncensorBlockedSitesTitle"></span></h1>
   <div class="close-button"></div>
   <div class="content-area">
-    <div>
+    <div class="proxy-title-with-country">
       <span i18n-content="aListOfSitesBlocked_start"></span> <span id="ipRecognitionCountryName"></span> <span i18n-content="aListOfSitesBlocked_end"></span>
     </div>
-    <div>
-      <!--<span i18n-content="clickTheButtonToUpdate"></span>-->
-      <button id="update-domains" i18n-content="updateDomainsButtonLabel">
-    </div>
     <list id="blocked-sites-list" class="settings-list"></list>
+    <button id="update-domains" i18n-content="updateDomainsButtonLabel"></button>
   </div>
 </div>
