--- a/chrome/browser/resources/options2/bitpop_options.html
+++ b/chrome/browser/resources/options2/bitpop_options.html
@@ -23,7 +23,7 @@
     <h3 i18n-content="sectionTitleFacebookNotifications"></h3>
     <div>
       <button id="open-facebook-notifications-options"
-        i18n-content="openFacebookNotificationsOptions"></button>
+        i18n-content="openFacebookNotificationsOptions" class="link-button"></button>
     </div>
   </section>
 
@@ -33,11 +33,11 @@
     <h3 i18n-content="sectionTitleUncensorFilterControl">Filter control</h3>
     <div>
       <div class="radio">
-        <label><input type="radio" id="uncensor-always-redirect" name="shouldRedirect" value="ON" pref="bitpop.uncensor_should_redirect">
+        <label><input type="radio" id="uncensor-always-redirect" name="shouldRedirect" value="0" pref="bitpop.uncensor_should_redirect">
           <span i18n-content="uncensorAlwaysRedirectOn">Always redirect / ON</span></label>
       </div>
       <div class="radio">
-        <label><input type="radio" id="uncensor-never-redirect" name="shouldRedirect" value="OFF" pref="bitpop.uncensor_should_redirect">
+        <label><input type="radio" id="uncensor-never-redirect" name="shouldRedirect" value="1" pref="bitpop.uncensor_should_redirect">
           <span i18n-content="uncensorNeverRedirectOff">Never redirect / OFF</span></label>
       </div>
       <br/>
@@ -49,8 +49,8 @@
         <label><input type="checkbox" id="uncensor-notify-update" name="notifyUpdate" pref="bitpop.uncensor_notify_updates">
           <span i18n-content="uncensorNotifyUpdates">Be notified when list updates</span></label>
       </div>
-
-      <button id="open-uncensor-filter-lists" i18n-content="openUncensorFilterLists"></button>
+      <br/>
+      <button id="open-uncensor-filter-lists" class="link-button" i18n-content="openUncensorFilterLists"></button>
     </div>
   </section>
 
@@ -60,15 +60,15 @@
     <div>
       <label i18n-content="whenToUseProxy"></label>
       <div class="radio">
-        <label><input type="radio" name="globalProxyControl" id="use-auto-proxy" value="ON" pref="bitpop.global_proxy_control">
+        <label><input type="radio" name="globalProxyControl" id="use-auto-proxy" value="0" pref="bitpop.global_proxy_control">
           <span i18n-content="useAutoProxy"></span></label>
       </div>
       <div class="radio">
-        <label><input type="radio" name="globalProxyControl" id="never-use-proxy" value="OFF" pref="bitpop.global_proxy_control">
+        <label><input type="radio" name="globalProxyControl" id="never-use-proxy" value="1" pref="bitpop.global_proxy_control">
           <span i18n-content="neverUseProxy"></span></label>
       </div>
       <div class="radio">
-        <label><input type="radio" name="globalProxyControl" id="ask-before-using" value="CUSTOM" pref="bitpop.global_proxy_control">
+        <label><input type="radio" name="globalProxyControl" id="ask-before-using" value="2" pref="bitpop.global_proxy_control">
           <span i18n-content="askBeforeUsing"></span></label>
       </div>
       <br/>
@@ -76,12 +76,16 @@
         <label><input type="checkbox" id="show-message-for-active-proxy" pref="bitpop.show_message_for_active_proxy">
           <span i18n-content="showMessageForActiveProxy"></span></label>
       </div>
-
-      <button id="open-proxy-domain-settings"
+      <br/>
+      <button id="open-proxy-domain-settings" class="link-button"
         i18n-content="openProxyDomainSettings"></button>
     </div>
-  </section>  
+  </section>
   <footer>
   </footer>
+
+  <div id="advanced-settings" hidden>
+    <div id="advanced-settings-container"></div>
+  </div>
 </div>
-  
+
