--- a/chrome/browser/resources/uber/uber.html
+++ b/chrome/browser/resources/uber/uber.html
@@ -30,6 +30,9 @@
     i18n-values="id:settingsHost; data-url:settingsFrameURL;"
     data-favicon="chrome://theme/IDR_SETTINGS_FAVICON"></div>
 <div class="iframe-container"
+		i18n-values="id:bitpopSettingsHost; data-url:bitpopSettingsFrameURL;"
+		data-favicon="chrome://theme/IDR_SETTINGS_FAVICON"></div>
+<div class="iframe-container"
     i18n-values="id:helpHost; data-url:helpFrameURL;"
     data-favicon="chrome://theme/IDR_PRODUCT_LOGO_16"></div>
 
