--- a/chrome/browser/resources/sync_promo/welcome.html
+++ b/chrome/browser/resources/sync_promo/welcome.html
@@ -1,14 +1,23 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html class="no-js" i18n-values="dir:textdirection">
 <head>
 <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<title>Login</title>
-
-<!-- CSS -->
+  <meta charset="utf-8">
+  <title i18n-content="promoPageTitle"></title>
+  <script src="chrome://resources/js/load_time_data.js"></script>
+  <script src="chrome://resources/js/cr.js"></script>
+  <script src="chrome://resources/js/util.js"></script>
+  <script src="chrome://resources/js/cr/event_target.js"></script>
+  <script src="../strings.js"></script>
+  <script src="sync_promo.js"></script>
+  <link rel="stylesheet" href="../shared/css/throbber.css">
+  <link rel="stylesheet" href="../shared/css/widgets.css">
+  <link rel="stylesheet" href="../sync_setup_overlay.css">
+  <link rel="stylesheet" href="sync_promo.css">
   <link rel="stylesheet" href="main.css">
  </head>
 <body>
@@ -52,5 +61,13 @@
   <!-- / container -->
 </div>
 <!-- / wrapper -->
+<div class="sync_setup_wrap" hidden>
+  <div id="sync-promo">
+    <div id="sync-promo-contents">
+      <include src="../sync_setup_overlay.html" />
+    </div>
+  </div>
+</div>
 </body>
+<script src="chrome://resources/js/i18n_template2.js"></script>
 </html>
