--- a/chrome/browser/resources/sync_setup_overlay.html
+++ b/chrome/browser/resources/sync_setup_overlay.html
@@ -1,43 +1,5 @@
 <div id="sync-setup-overlay" class="page" hidden>
-<div id="wrapper">
   <div class="close-button"></div>
-  <div id="sync-setup-connection-check">
-    <div id="connection-check-header">
-      <h2 i18n-content="checkConnectionHead"></h2>
-    </div>
-    <div>
-      <div id="offline-indicator" class="check"></div>
-      <div id="info">
-        <div id="status-text">
-          <span id="checking-text" hidden>
-            <span i18n-content="checkingConnection"></span>
-            <span class="throbber" style="visibility: visible"></span>
-          </span>
-          <!--
-          <span id="connection-error-text"
-                i18n-content="connectionError" hidden></span>
-          -->
-        </div>
-        <div id="top-blurb-error" class="reset-hidden" hidden>
-          <span id="error-signing-in" i18n-content="errorSigningIn">Error signing in.</span>
-          <span id="error-custom" hidden></span>
-        </div>
-        <div id="errormsg-0-connection" class="errormsg reset-hidden"
-             i18n-content="couldNotConnect" hidden>
-        </div>
-      </div>
-      <div id="connection-check-buttons">
-        <button id="check-try-again" i18n-content="checkTryAgain"
-                class=""></button>
-        <button id="check-cancel" i18n-content="checkCancel"
-                class=""></button>
-      </div>
-    </div>
-  </div>
-  <div id="iframe-container" hidden>
-    <div id="iframe-close-button"></div>
-    <iframe id="login-iframe" src="http://www.bitpop.com/" seamless></iframe>
-  </div>
   <div id="sync-setup-login" hidden>
     <div id="promo-title-container" hidden>
       <h1 i18n-content="promoTitle"></h1>
@@ -62,58 +24,6 @@
               <div id="signin-header-logo"></div>
             </div>
             <form id="gaia-login-form">
-              <div id="email-row" class="reset-shown">
-                <label for="gaia-email" i18n-content="emailLabel">
-                </label>
-                <input id="gaia-email" type="text" name="email" value=""
-                    class="reset-enabled reset-shown reset-value"
-                    autocomplete="off">
-              </div>
-              <div id="email-readonly-row" class="reset-hidden">
-                <strong class="email-label" i18n-content="emailLabel"></strong>
-                <div id="email-readonly"></div>
-              </div>
-              <div id="errormsg-0-email" class="errormsg reset-hidden"
-                  i18n-content="cannotBeBlank" hidden>
-              </div>
-              <div id="password-row" class="reset-shown">
-                <label>
-                  <strong class="password-label" i18n-content="passwordLabel">
-                  </strong>
-                  <input id="gaia-passwd" type="password" name="passwd"
-                      class="reset-enabled reset-value" autocomplete="off">
-                </label>
-                <div id="errormsg-0-password" class="errormsg reset-hidden"
-                    i18n-content="cannotBeBlank" hidden>
-                </div>
-              </div>
-              <div id="access-code-input-row"
-                  class="access-code-row reset-hidden" hidden>
-                <label>
-                  <strong i18n-content="enterAccessCode"></strong>
-                  <a i18n-values="href:getAccessCodeURL"
-                      i18n-content="getAccessCodeHelp" target="_blank"
-                      class="account-link"></a>
-                  <input id="access-code" type="password" name="accessCode"
-                      class="reset-enabled reset-value">
-                </label>
-              </div>
-              <div id="otp-input-row" class="otp-row reset-hidden" hidden>
-                <label>
-                  <strong i18n-content="enterOtp"></strong>
-                  <a i18n-values="href:getOtpURL"
-                      i18n-content="getOtpHelp" target="_blank"
-                      class="account-link"></a>
-                  <input id="otp" type="text" name="otp"
-                      class="reset-enabled reset-value">
-                </label>
-              </div>
-              <div id="errormsg-1-password" class="errormsg reset-hidden"
-                  hidden>
-                <span i18n-content="invalidCredentials"></span>
-                <a i18n-values="href:invalidPasswordHelpURL" class="help-link"
-                    target="_blank">?</a>
-              </div>
               <div id="errormsg-fatal" class="errormsg reset-hidden" hidden>
                 <span i18n-content="unrecoverableError"></span>
                 <a i18n-values="href:unrecoverableErrorHelpURL"
@@ -127,18 +37,6 @@
               </div>
               <div id="asp-warning-div" class="errormsg reset-hidden" hidden>
                 <span i18n-values=".innerHTML:aspWarningText"></span>
-              </div>
-              <div id="captcha-div" class="reset-hidden" hidden>
-                <div id="captcha-wrapper">
-                  <div id="captcha-image"></div>
-                </div>
-                <div>
-                  <label>
-                    <strong i18n-content="captchaInstructions"></strong>
-                    <input id="captcha-value" type="text" name="captchaValue"
-                        value="" class="reset-disabled reset-value">
-                  </label>
-                </div>
               </div>
               <div id="errormsg-0-connection" class="errormsg reset-hidden"
                   i18n-content="couldNotConnect" hidden>
@@ -290,6 +188,13 @@
                   i18n-content="passphraseEncryptionMessage"></div>
               <div class="radio">
                 <label>
+                  <input id="do-not-encrypt-option" name="encrypt"
+                      type="radio" value="none">
+                  <span i18n-content="doNotEncryptPasswordsNotSynced"></span>
+                </label>
+              </div>
+              <div class="radio">
+                <label>
                   <input id="encrypt-sensitive-option" name="encrypt"
                       type="radio" value="sensitive">
                   <span i18n-content="encryptSensitiveOption"></span>
@@ -304,48 +209,34 @@
               </div>
             </div>
           </div>
-          <hr>
-          <h4 i18n-content="passphraseSectionTitle"></h4>
-          <div id="sync-custom-passphrase-container"
-              class="sync-customize-section-container">
-            <div class="radio">
-              <label>
-                <input id="google-option" name="option" type="radio"
-                    value="google">
-                <span i18n-content="googleOption"></span>
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input id="explicit-option" name="option" type="radio"
-                    value="explicit">
-                <span i18n-content="explicitOption"></span>
-              </label>
-              <a i18n-values="href:encryptionHelpURL" target="_blank"
-                  i18n-content="learnMore"></a>
-            </div>
-            <div id="sync-custom-passphrase"
-                class="reset-hidden" hidden>
-              <div id="sync-passphrase-message">
-                <span i18n-content="sectionExplicitMessagePrefix"></span>
-                <a href="http://google.com/dashboard" target="_blank"
-                    i18n-content="sectionExplicitMessagePostfix"></a>
-                <span>.</span>
+          <div id="sync-passphrase-ui-toggler" hidden>
+            <hr>
+            <h4 i18n-content="passphraseSectionTitle"></h4>
+            <div id="sync-custom-passphrase-container"
+                class="sync-customize-section-container">
+              <div id="sync-custom-passphrase"
+                  class="reset-hidden">
+                <div id="sync-passphrase-message">
+                  <span i18n-content="sectionExplicitMessagePrefix"></span>
+                  <a href="http://google.com/dashboard" target="_blank"
+                      i18n-content="sectionExplicitMessagePostfix"></a>
+                  <span>.</span>
+                </div>
+                <div class="sync-custom-passphrase-input">
+                  <input id="custom-passphrase" type="password"
+                      class="reset-value"
+                      i18n-values="placeholder:passphraseLabel">
+                </div>
+                <div class="sync-custom-passphrase-input">
+                  <input id="confirm-passphrase" type="password"
+                      class="reset-value"
+                      i18n-values="placeholder:confirmLabel">
+                </div>
+                <div id="empty-error" class="error"
+                    i18n-content="emptyErrorMessage" hidden></div>
+                <div id="mismatch-error" class="error"
+                    i18n-content="mismatchErrorMessage" hidden></div>
               </div>
-              <div class="sync-custom-passphrase-input">
-                <input id="custom-passphrase" type="password"
-                    class="reset-value"
-                    i18n-values="placeholder:passphraseLabel">
-              </div>
-              <div class="sync-custom-passphrase-input">
-                <input id="confirm-passphrase" type="password"
-                    class="reset-value"
-                    i18n-values="placeholder:confirmLabel">
-              </div>
-              <div id="empty-error" class="error"
-                  i18n-content="emptyErrorMessage" hidden></div>
-              <div id="mismatch-error" class="error"
-                  i18n-content="mismatchErrorMessage" hidden></div>
             </div>
           </div>
           <div id="sync-existing-passphrase-container" hidden>
@@ -418,9 +309,4 @@
           i18n-values="value:stopSyncingConfirm">
     </div>
   </div>
-</div><!-- #wrapper -->
-<div id="iframe-container" hidden>
-  <div class="iframe-close-button"></div>
-  <iframe id="login-iframe" seamless></iframe>
-</div>
 </div>
