--- a/chrome/browser/resources/sync_promo/welcome.html
+++ b/chrome/browser/resources/sync_promo/welcome.html
@@ -44,7 +44,7 @@
           <div><a id="facebooklogin" href="http://dev.bitpop.com:8000/login/facebook/">Log in with Facebook</a></div>
 
           <p>Don't like Facebook?<br />We got you</p>
-          <div><a class="button" href="http://dev.bitpop.com:8000/login/bitpop/">Log in with BitPop</a></div>
+          <div><a id="bitpoplogin" class="button" href="http://dev.bitpop.com:8000/login/bitpop/">Log in with BitPop</a></div>
         </div>
         <!-- / bubble bubble-login -->
 
