Fixing small bugs with extensions and sync.
- fixed sparkle entry in .gypi
- added onbeforeunload listener for settings page
- corrected the url var naming error in
  signin_results_page_tracker.cc
- fixed invalid passwords checkbox state case
- uncensor proxy version change
- fb controller ext. fixes to extend tokens
- build number update in chrome/VERSION

--- a/chrome/browser/resources/sync_setup_overlay.html
+++ b/chrome/browser/resources/sync_setup_overlay.html
@@ -70,6 +70,7 @@
       <h1 i18n-content="confirmSyncPreferences"></h1>
       <div id="sync-instructions-container" class="content-area">
         <span i18n-content="chooseDataTypesInstructions"></span>
+        <span i18n-values=".innerHTML:encryptionDisabledMessage"></span>
         <a id="encryption-help-link" target="_blank"
             i18n-values="href:syncEverythingHelpURL" i18n-content="learnMore">
         </a>
