--- a/chrome/browser/resources/ntp4/new_tab.html
+++ b/chrome/browser/resources/ntp4/new_tab.html
@@ -150,14 +150,19 @@
 <div id="login-status-bubble-contents">
   <div id="login-status-message-container">
     <span i18n-content="login_status_message"></span>
+
+    <span i18n-values=".innerHTML:login_encryption_disabled_message"></span>
+
     <a id="login-status-learn-more" i18n-content="learn_more"
         i18n-values="href:login_status_url" target="_blank"></a>
   </div>
   <div class="login-status-row">
+    <!--
     <div id="login-status-advanced-container">
       <a id="login-status-advanced"
           i18n-content="login_status_advanced" href="#"></a>
     </div>
+    -->
     <button id="login-status-dismiss" i18n-content="login_status_dismiss">
     </button>
   </div>
