--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -18,7 +18,7 @@
     <div id="inner-wrap">
       <div class="content-item" id="chat-content">
         <p id="unavail" style="display:none"></p>
-        
+
         <div id="sidebar-head">
           <div id="head-row1">
             <div id="head-col1">
@@ -57,11 +57,16 @@
       <div class="content-item" id="login-content">
         <div id="login-centered">
           <img src="images/facebook_login_bitpop.png" alt="Facebook chat login" />
-          <p>Chat with your friends<br />while surfing</p>
-          <button class="btn" tabIndex="-1">Login</button>
+          <p class="promo">Chat with your friends<br />while surfing</p>
+          <button id="login-button" class="btn" tabIndex="-1">Login</button>
           <p class="error" style="display:none">
             The login data is already present. Check your internet connection. You will be connected
             as soon as possible.
+          </p>
+          <p id="sync-para" hidden>
+            <label for="enable-sync"><input id="enable-sync" type="checkbox">
+              Synchronize browser data using your Facebook account
+            </label>
           </p>
         </div>
       </div>
