Messages for sync activated after-notice.

--- a/chrome/browser/resources/ntp4/new_tab.html
+++ b/chrome/browser/resources/ntp4/new_tab.html
@@ -151,7 +151,10 @@
   <div id="login-status-message-container">
     <span i18n-content="login_status_message"></span>
 
-    <span i18n-values=".innerHTML:login_encryption_disabled_message"></span>
+    <span i18n-values=".innerHTML:login_encryption_disabled_message_before_link"></span>
+    <a id="login-status-advanced"
+        i18n-content="login_status_advanced" href="#"></a>
+    <span i18n-values=".innerHTML:login_encryption_disabled_message_after_link"></span>
 
     <a id="login-status-learn-more" i18n-content="learn_more"
         i18n-values="href:login_status_url" target="_blank"></a>
