Cumulative changes for windows version.
- Fixes for bubble popups
- bugfixes
- making messages extension
  receive all messages in chat.

--- a/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
+++ b/bitpop_specific/extensions/facebook_friends/friends_sidebar.html
@@ -45,12 +45,8 @@
           </div>
         </div>
 
-        <div class="box-wrap antiscroll-wrap">
-          <div class="box">
-            <div class="antiscroll-inner">
-              <div class="box-inner" id="scrollable-area">
-              </div>
-            </div>
+        <div class="antiscroll-wrap">
+          <div class="antiscroll-inner" id="scrollable-area">
           </div>
         </div>
       </div>
