--- a/chrome/browser/resources/sync_setup_overlay.html
+++ b/chrome/browser/resources/sync_setup_overlay.html
@@ -244,7 +244,7 @@
                     class="reset-hidden">
                 <div id="sync-passphrase-message">
                   <span i18n-content="sectionExplicitMessagePrefix"></span>
-                  <a href="https://www.google.com/settings/chrome/sync/"
+                  <a href="https://sync.bitpop.com/reset_sync_data/"
                       target="_blank"
                       i18n-content="sectionExplicitMessagePostfix"></a>
                   <span>.</span>
